<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- General application data -->
    <string name="app_name">Prevoz</string>
    <string name="app_version">2.3.1</string>
    <string name="acc_type">org.prevoz.account</string>
    <string name="flurry_apikey">YU4UUAB4JW592B4LFML8</string>
    
    <!-- General strings -->
    <string name="loading">Nalagam&#8230;</string>
    
    <!-- Error strings -->
    <string name="notconnected_error_title">Ni internetne povezave</string>
    <string name="notconnected_error_text">Za iskanje morate biti povezani na internet.</string>
    <string name="notconnected_error_ok">V redu</string>
    <string name="server_error">Strežnik prevoz ni na voljo. Prosimo poskusite kasneje.</string>
    <string name="network_error">Napaka na internetni povezavi, preverite če ste povezani.</string>
    <string name="account_exists_error">Račun za Prevoz.org že obstaja, imate lahko samo enega.</string>
    
    <!-- City selector strings -->
    <string name="city_hint">Kraj</string>
    
    <!--  Search strings -->
    <string name="search_label_from">Od</string>
    <string name="search_label_to">Do</string>
    <string name="search_label_date">Datum</string>
    <string name="search_no_results">Ta dan ni prevozov na izbrani relaciji.</string>
    <string name="all_locations">Vsi kraji</string>
    <string name="search_label_last">Nazadnje iskano</string>
    <string name="search_go">Išči</string>
    <string name="search_gps_locating">Lociram&#8230;</string>
    <string name="search_gps_error">Vaše lokacije ni bilo mogoče najti.</string>
    
    <!-- My rides strings -->
    <string name="myrides_addride">Dodaj prevoz</string>
    <string name="myrides_norides">Nimate objavljenega nobenega prevoza.</string>
    
    <!-- Notification strings -->
    <string name="notification_list_empty">Niste prijavljeni za obveščanje.\nČe se želite prijaviti za obveščanje pritisnite ikono zvočka ob rezultatih iskanja.</string>
    <string name="notify_reg_success">Prijavljeni ste na obveščanje.</string>
    <string name="notify_reg_fail">Ni vas bilo mogoče prijaviti na obveščanje.</string>
    <string name="notify_dereg_success">Obveščanje na relaciji je bilo preklicano.</string>
    <string name="notify_dereg_fail">Ni bilo mogoče preklicati obveščanja na tej relaciji.</string>
    <string name="notify_missing_loc">Za obveščanje morate pri iskanju izbrati začetek in cilj poti!</string>
    <string name="notify_statusbar">Novi prevozi na relaciji</string>
    <string name="notify_title">Obvestila</string>
        
    <!-- Ride add strings -->
    <string name="add_title">Dodajanje prevoza</string>
    <string name="add_datetime">Datum in čas</string>
    <string name="add_price">Delež stroškov</string>
    <string name="add_price_hint">Stroški</string>
    <string name="add_comment">Opombe</string>
    <string name="add_phone">Telefon</string>
    <string name="add_button">Predogled</string>
    <string name="add_send">Pošlji</string>
    <string name="add_num_ppl">Št. ljudi</string>
    <string name="add_insurance">imam nezgodno zavarovanje potnikov v vozilu</string>
    <string name="logout">Odjava</string>
    <string name="logout_success">Odjava uspešna.</string>
    <string name="add_select_city">izberi kraj</string>
    
    <!-- Ride add errors -->
    <string name="add_error_timepast">Čas prevoza je že bil.</string>
    <string name="add_error_enterphone">Vpišite telefonsko številko.</string>
    <string name="add_error_enterprice">Vpišite delež stroškov prevoza.</string>
    <string name="add_error_enterfrom">Izberite kraj odhoda.</string>
    <string name="add_error_enterto">Izberite kraj prihoda.</string>
   
    
    <!--  Ride details strings -->
    <string name="price">stroški</string>
    <string name="delete">Izbriši</string>
    <string name="ride_deleted">Prevoz je bil uspešno izbrisan.</string>
    <string name="driver_has_insurance">Voznik <b>ima</b> zavarovanje za sopotnike.</string>
    <string name="driver_hasnt_insurance">Voznik <b>nima</b> zavarovanja za sopotnike.</string>
   	<string name="send_sms">Pošlji SMS</string>
    <string name="call">Pokliči</string>
    <string name="add_to_contacts">Dodaj med kontakte</string>
    <string name="ride_is_full">Ni več prostih mest</string>
    <string name="ride_set_full_success">Prevoz je bil označen kot poln.</string>
    <string name="ride_set_empty_success">Prevoz je bil označen kot prazen.</string>
        
    <string name="cd_my_rides">Moji prevozi</string>
    <string name="cd_gps_location">Izberi trenutno lokacijo</string>
        
    <string-array name="people_tags">
      <item>oseba</item>
      <item>osebi</item>
      <item>osebe</item>
      <item>oseb</item>
    </string-array>
    
    <string-array name="ride_forms">
    	<item>nov prevoz</item>
    	<item>nova prevoza</item>
    	<item>novi prevozi</item>
    	<item>novih prevozov</item>
    </string-array>
    
    <!--  Day and month names -->
    
    <string name="today">danes</string>
    <string name="tomorrow">jutri</string>
    
    <string-array name="day_names">
        <item>Nedelja</item>
        <item>Ponedeljek</item>
        <item>Torek</item>
        <item>Sreda</item>
        <item>Četrtek</item>
        <item>Petek</item>
        <item>Sobota</item>
    </string-array>

    <string-array name="short_day_names">
        <item>ned</item>
        <item>pon</item>
        <item>tor</item>
        <item>sre</item>
        <item>čet</item>
        <item>pet</item>
        <item>sob</item>
    </string-array>
    
    <string-array name="notify_day_names">
        <item>nedeljo</item>
        <item>ponedeljek</item>
        <item>torek</item>
        <item>sredo</item>
        <item>četrtek</item>
        <item>petek</item>
        <item>soboto</item>
    </string-array>
    
    <string-array name="month_names">
        <item>januar</item>
        <item>februar</item>
        <item>marec</item>
        <item>april</item>
        <item>maj</item>
        <item>junij</item>
        <item>julij</item>
        <item>avgust</item>
        <item>september</item>
        <item>oktober</item>
        <item>november</item>
        <item>december</item>
    </string-array>
    
    <string name="menu_my_rides">Moji prevozi</string>
    <string name="menu_notifications">Obvestila</string>
    <string name="title_login">Prijava</string>
    <string name="title_search">Iskanje</string>
    <string name="title_addride">Nov prevoz</string>
    <string name="title_myrides">Moji prevozi</string>
    <string name="title_notifications">Obvestila</string>
</resources>
