<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    
    <ImageButton
        android:id = "@+id/search_my_rides"
        android:layout_height = "@dimen/title_height"
        android:layout_width = "wrap_content"
        android:layout_alignParentRight = "true" 
        android:layout_alignParentTop = "true"
        android:scaleType = "fitCenter"
        android:src="@drawable/add_ride"
        android:background = "@drawable/button_title"
        android:contentDescription="@string/cd_my_rides"
        />
    
   <LinearLayout 
   		android:layout_height="@dimen/title_height"
   		android:layout_width="1sp"
   		android:layout_toLeftOf="@id/search_my_rides"
   		android:id = "@+id/delimiter1"
   		android:background="#EEE"
   ></LinearLayout>
   
    <ImageButton
        android:id = "@+id/show_active_notifications"
        android:layout_height = "@dimen/title_height"
        android:layout_width = "wrap_content"
        android:layout_toLeftOf="@id/delimiter1"
        android:layout_alignParentTop = "true"
        android:scaleType = "fitCenter"
        android:src="@drawable/bells"
        android:background = "@drawable/button_title"
        android:contentDescription="@string/cd_show_active_notifications"
        />
    
    <LinearLayout 
   		android:layout_height="@dimen/title_height"
   		android:layout_width="1sp"
   		android:layout_toLeftOf="@id/show_active_notifications"
   		android:id = "@+id/delimiter2"
   		android:background="#EEE"
   ></LinearLayout>
    
    <include layout="@layout/title_bar" 
         android:id = "@+id/title_bar"
         
         android:layout_width = "wrap_content"
         android:layout_height = "@dimen/title_height"
          
         android:layout_toLeftOf = "@id/delimiter2"
         android:layout_alignParentLeft = "true"
         android:layout_alignParentTop = "true" />
    
    <TextView
    	android:id = "@+id/from_label"
    	android:layout_width = "fill_parent"
    	android:layout_height = "wrap_content"
    	android:layout_below = "@id/title_bar"
    	
    	android:layout_marginTop = "5dip"
    	android:layout_marginLeft = "17dip"
    	android:layout_marginRight = "15dip"
    	
    	android:text = "@string/search_label_from"
    	style = "@style/field_labels"
    	/>
   
    	
    <Button
    	android:id = "@+id/from_button"
    	android:layout_width = "fill_parent"
    	android:layout_height = "wrap_content"
    	
    	android:layout_below = "@id/from_label"
    	android:layout_alignParentLeft = "true"
    	android:layout_marginLeft = "15dip"
    	android:layout_marginRight = "15dip"
    	android:layout_marginTop = "5dip"
    	
    	android:background = "@drawable/button_white"
    	style = "@style/button_white"
    	/>
    
    <TextView
    	android:id = "@+id/to_label"
    	android:layout_width = "fill_parent"
    	android:layout_height = "wrap_content"
    	
    	android:layout_below = "@id/from_button"
 		android:layout_marginTop = "5dip"   
 		android:layout_marginLeft = "17dip"
    	android:layout_marginRight = "15dip"
    	
    	android:text = "@string/search_label_to"
    	style = "@style/field_labels"
    	/>
    	
    <Button
    	android:id = "@+id/to_button"
    	android:layout_width = "fill_parent"
    	android:layout_height = "wrap_content"
    	
    	android:layout_below = "@id/to_label"
    	android:layout_alignParentLeft = "true"
    	android:layout_marginLeft = "15dip"
    	android:layout_marginRight = "15dip"
    	android:layout_marginTop = "5dip"
    	
    	android:background = "@drawable/button_white"
    	style = "@style/button_white"
    	/>
    	
     <TextView
    	android:id = "@+id/date_label"
    	android:layout_width = "fill_parent"
    	android:layout_height = "wrap_content"
    	
    	android:layout_below = "@id/to_button"
    	android:layout_marginLeft = "17dip"
    	android:layout_marginRight = "15dip"
    	android:layout_marginTop = "5dip"
    	
    	android:text = "@string/search_label_date"
    	style = "@style/field_labels"
    	/>
    	
    <Button
    	android:id = "@+id/date_button"
    	android:layout_height = "wrap_content"
    	android:layout_width = "fill_parent"
    	
    	android:layout_below = "@id/date_label"
    	android:layout_marginLeft = "15dip"
    	android:layout_marginRight = "15dip"
    	android:layout_marginTop = "5dip" 
   
    	android:background = "@drawable/button_white"
    	style = "@style/button_white"
    	/>
    	

    	
    <Button
    	android:id = "@+id/search_button"
    	android:text = "@string/search_go"
    	android:gravity = "center"
    	android:layout_height = "wrap_content"
    	android:layout_width = "fill_parent"
    	android:layout_marginLeft = "15dip"
    	android:layout_marginRight = "15dip"
    	android:layout_marginBottom = "10dip"
    	android:layout_marginTop = "10dip"    	
    	android:background = "@drawable/button_black_rnd"
    	android:layout_alignParentBottom = "true"
    	style = "@style/button_black"
    />
    	
	  <include layout = "@layout/last_searches"
	  		   android:layout_width = "fill_parent"
	    	   android:layout_height = "fill_parent"
	  	       android:layout_below = "@id/date_button"
	    	   android:layout_above = "@id/search_button" />
  
</RelativeLayout>
